Next iteration for semantic pages

--- a/person-list-favorites.html
+++ b/person-list-favorites.html
@@ -1,5 +1,6 @@
 ﻿<script type="application/ld+json">
 {
+    <!-- использовать http://www.schema.org/ItemList -->
     "version": "1.0"
 }
 </script>
