--- a/person-profile_en-US_json-ld.html
+++ b/person-profile_en-US_json-ld.html
@@ -10,15 +10,18 @@
         "Sk289dk2amnck0oeHXn"
     ],
     "cover": {
-        "h1": "I'm Anonymous",
-        "h2": "My motto",
-        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam risus nulla, commodo vitae tincidunt quis, bibendum at felis. Donec placerat nisl ac libero lacinia, vel pellentesque metus placerat.",
-        "li": "Люблю читать и играть на гитаре",
-        "li": "Моя цель - захватить Мир",
-        "h1": "Second cover",
-        "h2": "second h2",
-        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam risus nulla, commodo vitae tincidunt quis, bibendum at felis. Donec placerat nisl ac libero lacinia, vel pellentesque metus placerat.",
-        "li": "bla-bla"
+        "@context": "http://schema.org",
+        "@type": "WebPage",
+        "image": "http://domainname.com/cover-image1.jpg",
+        "name": "I'm Anonymous",
+        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam risus nulla, commodo vitae tincidunt quis, bibendum at felis. Donec placerat nisl ac libero lacinia, vel pellentesque metus placerat."
+    },
+    "cover2": {
+        "@context": "http://schema.org",
+        "@type": "WebPage",
+        "image": "http://domainname.com/cover-image2.jpg",
+        "name": "Cover2",
+        "text": "Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem."
     },
     "@context": "http://schema.org",
     "@type": "Person",
@@ -42,6 +45,20 @@
     "email": "alexey.anshakov@gmail.com",
     "telephone": "74951234567",
     "url": "http://alexey-anshakov.webrunes.com",
+    "article": {
+        "@context": "http://schema.org",
+        "@type": "WebPage",
+        "image": "http://domainname.com/image.jpg",
+        "name": "Cover2",
+        "url": "http://domainname.com/article/JKdsnwmxdH83jdjs"
+    },
+    "article2": {
+        "@context": "http://schema.org",
+        "@type": "WebPage",
+        "image": "http://domainname.com/image2.jpg",
+        "name": "Skills",
+        "url": "http://domainname.com/article/kjdfkj87jhsdkjnNasDpz"
+    },
     "text": [
         {
             "@context": "http://schema.org",
