--- a/person-hub-profile.htm
+++ b/person-hub-profile.htm
@@ -90,7 +90,7 @@
                                     <div class="media thumbnail">
                                         <div class="col-xs-12 col-md-6 pull-right">
                                             <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject">
-                                                <img itemprop="contentUrl" src="img/profile1.jpg" class="pull-left">
+                                                <img itemprop="contentUrl" src="img/profile1-200x200.jpg" class="pull-left">
                                             </span>
                                             <ul class="details">
                                                 <li>Registered: 22 Jun 2013</li>
@@ -148,7 +148,7 @@
                             <div class="paragraph">
                                 <div class="col-xs-12 col-md-6">
                                     <figure>
-                                        <img src="img/profile1.jpg" itemprop="image">
+                                        <img src="img/profile1-200x200.jpg" itemprop="image">
                                         <figcaption class="callout figure-details">
                                             <h5>Info</h5>
                                             <p>Здесь может идти описание картинки, ссылка откуда взята, автор и пр. информация</p>
@@ -319,7 +319,7 @@
                                 <article>
                                     <div class="media thumbnail">
                                         <div class="col-xs-12 pull-right">
-                                            <img src="img/profile1.jpg" class="pull-left">
+                                            <img src="img/profile1-200x200.jpg" class="pull-left">
                                             <ul class="details">
                                                 <li>Registered: 22 Jun 2013</li>
                                                 <li>Rating: 244</li>
