JSON-LD examples files

--- a/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US - next version (not ready).htm
+++ b/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US - next version (not ready).htm
@@ -1,14 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Official webRunes WRIO OS node">
-    <meta name="author" content="webRunes">
-
-    <title>webRunes</title>
+    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.">
+    <meta name="author" content="User name1, User name2">
+    <meta name="keywords" content="story, cat">
+    <title>The story of the cat</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/webrunes.css" rel="stylesheet">
@@ -95,7 +94,7 @@
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <p>
-                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте его.
                                             </p>
                                             <ul class="actions">
                                                 <li><a href="#"><span class="glyphicon glyphicon-edit"></span>Edit</a></li>
@@ -279,7 +278,7 @@
                                         </div>
                                         <div class="col-xs-12">
                                             <p>
-                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте его.
                                             </p>
                                         </div>
                                     </div>
