--- a/plus-apps-old.htm
+++ b/plus-apps-old.htm
@@ -101,7 +101,7 @@
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <p>
-                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте его.
                                             </p><ul class="actions">
                                                 <li><a href="#"><span class="glyphicon glyphicon-edit"></span>Edit</a></li>
                                                 <li><a href="#"><span class="glyphicon glyphicon-share"></span>Share</a></li>
