--- a/webrunes-privacy_en-US.html
+++ b/webrunes-privacy_en-US.html
@@ -28,8 +28,8 @@
     "@type": "Person",
     "givenName": "Alexey",
     "familyName": "Anshakov",
-    "articleSection" : "problems",
-    "articleBody" : "related for the most part to the Internet, and our vision of possible ways to solve them. Those will often be followed by previews of projects mentioned in the stories. Keep in mind: some of them might change, some will remain just our fantasy; at this moment",
+    "articleSection" : "Problems",
+    "articleBody" : "Related for the most part to the Internet, and our vision of possible ways to solve them. Those will often be followed by previews of projects mentioned in the stories. Keep in mind: some of them might change, some will remain just our fantasy; at this moment",
     "description": [
     {
     "paragraph1": "Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.",
