--- a/person-profile.htm
+++ b/person-profile.htm
@@ -95,7 +95,7 @@
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <p>
-                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте его.
                                             </p>
                                             <ul class="actions">
                                                 <li><a href="#"><span class="glyphicon glyphicon-edit"></span>Edit</a></li>
@@ -444,7 +444,7 @@
                                         </div>
                                         <div class="col-xs-12">
                                             <p>
-                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте его.
                                             </p>
                                         </div>
                                     </div>
