--- a/webrunes-privacy.htm
+++ b/webrunes-privacy.htm
@@ -100,7 +100,7 @@
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <p>
-                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                                Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте его.
                                                 <ul class="actions">
                                                     <li><a href="#"><span class="glyphicon glyphicon-edit"></span>Edit</a></li>
                                                     <li><a href="#"><span class="glyphicon glyphicon-share"></span>Share</a></li>
@@ -250,7 +250,7 @@
                                 <div class="paragraph">
                                     <div class="col-xs-12 col-md-6">
                                         <p>
-                                            Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте данный профайл.
+                                            Информация публичного профайла доступна любому, даже незарегистрированным пользователям. Если вы хотите оставаться анонимным, просто не заполняйте его.
                                         </p>
                                     </div>
                                     <div class="col-xs-12 col-md-6">
