Left menu list + minor updates

--- a/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US.htm
+++ b/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US.htm
@@ -42,7 +42,21 @@
                     </div>
                     <nav class="navbar-collapse in">
                         <ul class="nav navbar-nav" id="nav-accordion">
-                            <li class="active"><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs pull-right"></span></a><a href="#">The story of the cat</a></li>
+                            <li class="active"><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs pull-right"></span></a><a href="https://webrunes.com/post/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US?name=The-story-of-the-cat">The story of the cat</a></li>
+                            <li><a href="#" class="pull-right"><span class="glyphicon glyphicon-remove btn btn-xs pull-right"></span></a><a href="https://webrunes.com/post/hash_goes_here_en-US?name=Another-article">Another article</a></li>
+                            <li class="panel">
+                                <a href="#element1" class="collapsed" data-parent="#nav-accordion" data-toggle="collapse"><span class="qty pull-right">19 135<span class="currency">WRG</span></span>webGold</a>
+                                <div class="collapse" id="element1">
+                                    <ul class="nav nav-pills nav-stacked sub">
+                                        <li><a href="https://webrunes.com/post/7a-zNisZGOS1_AkuWwJyxGoVz0ezHSJcH1kH09bSaNCeYL4b_en-US?name=Help-post" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Help post</a></li>
+                                        <li><a href="https://my-blog.github.com/my-posts/4z0ezHSY1bSaNCeVkJy7a_Aku9bL-zNisxGoJc1WwZGOSHH0_ru-RU?name=Something-else" class="pull-right"><span class="glyphicon glyphicon-remove"></span></a><a href="#">Something else</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="new panel">
+                                <a href="#element4" data-parent="#nav-accordion" data-toggle="collapse" class="collapsed"><span class="glyphicon glyphicon-plus"></span></a>
+                                <div class="collapse" id="element4"></div>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -73,12 +87,10 @@
                                         <ul class="actions">
                                             <li><a href="#"><span class="glyphicon glyphicon-edit"></span>Edit</a></li>
                                             <li><a href="#"><span class="glyphicon glyphicon-share"></span>Share</a></li>
+                                            <li><a href="wrio-account-edit.htm"><span class="glyphicon glyphicon-arrow-up"></span>Upgrade guest account for free</a> <span class="label label-warning">30 days left</span></li>
                                         </ul>
                                         <ul class="actions">
                                             <li><a href="#"><span class="glyphicon glyphicon-user"></span>Already have an account?</a></li>
-                                        </ul>
-                                        <ul class="actions">
-                                            <li><a href="wrio-account-edit.htm"><span class="glyphicon glyphicon-arrow-up"></span>Upgrade guest account for free</a> <span class="label label-warning">30 days left</span></li>
                                         </ul>
                                     </div>
                                 </div>
