New JSON-LD files

--- a/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY-list.html
+++ b/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY-list.html
@@ -11,19 +11,20 @@
     <script src="http://wr.io/main.js"></script>
     <script type="application/ld+json">
         {
+        "entity": "List",
         "version": "1.0",
         "language": [
         {
         "@type": "article",
         "language": "en-US",
         "name": "The story of the cat",
-        "url": "webrunes.com/post/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US?name=The-story-of-the-cat"
+        "url": "webrunes.com/post/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US.html?name=The-story-of-the-cat"
         },
         {
         "@type": "article",
         "language": "ru-RU",
         "name": "История о коте",
-        "url": "my-blog.github.com/my-posts/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_ru-RU?name=История-о-коте"
+        "url": "my-blog.github.com/my-posts/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_ru-RU.html?name=История-о-коте"
         }
         ]
         }
