--- a/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US.html
+++ b/1WwZGOSH1kJy7a-zNisxGoJcH0_Aku9bL4bSaNCeVz0ezHSY_en-US.html
@@ -11,7 +11,7 @@
     <script src="http://wr.io/main.js"></script>
     <script type="application/ld+json">
         {
-        "entity": "Article",
+        "entity": "article",
         "templateVersion": "1.0",
         "article": {
         "@context": "schema.org",
