--- a/sign_in.htm
+++ b/sign_in.htm
@@ -200,89 +200,96 @@
                     <div class="margin-bottom">
                         <button class="btn btn-success btn-block step0" type="submit"><span class="glyphicon glyphicon-flash"></span>Login with guest account</button>
                     </div>
-                    <ul class="breadcrumb">
-                        <li class="active">Or login with</li>
-                    </ul>
-                    <ul class="nav nav-pills nav-stacked providers">
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/google/logo" title=">
-                                <label>Google</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/facebook/logo" title=">
-                                <label>Facebook</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/twitter/logo" title=">
-                                <label>Twitter</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/vk/logo" title=">
-                                <label>Vkontakte</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/github/logo" title=">
-                                <label>GitHub</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/linkedin/logo" title=">
-                                <label>Linkedin</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/dropbox/logo" title=">
-                                <label>Dropbox</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/instagram/logo" title=">
-                                <label>Instagram</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/flickr/logo" title=">
-                                <label>Flickr</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/tumblr/logo" title=">
-                                <label>Tumblr</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/yahoo/logo" title=">
-                                <label>Yahoo</label>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="https://oauth.io/api/providers/yandex/logo" title=">
-                                <label>Yandex</label>
-                            </a>
-                        </li>
-                    </ul>
-                    <!--<hr />
                     <div id="sign_in-carousel" class="carousel slide" data-interval="false" data-ride="carousel">
                         <div class="carousel-inner">
+                            <div class="item active">
+                                <form class="form-signin" role="form">
+                                    <ul class="breadcrumb">
+                                        <li class="active">Social login</li>
+                                        <li><a href="#sign_in-carousel" data-slide="prev">Sign in</a></li>
+                                        <li><a href="#sign_in-carousel" data-slide="next">Create an account</a></li>
+                                    </ul>
+
+                                    <ul class="nav nav-pills nav-stacked providers">
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/google/logo" title="" />
+                                                <label>Google</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/facebook/logo" title="" />
+                                                <label>Facebook</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/twitter/logo" title="" />
+                                                <label>Twitter</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/vk/logo" title="" />
+                                                <label>Vkontakte</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/github/logo" title="" />
+                                                <label>GitHub</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/linkedin/logo" title="" />
+                                                <label>Linkedin</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/dropbox/logo" title="" />
+                                                <label>Dropbox</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/instagram/logo" title="" />
+                                                <label>Instagram</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/flickr/logo" title="" />
+                                                <label>Flickr</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/tumblr/logo" title="" />
+                                                <label>Tumblr</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/yahoo/logo" title="" />
+                                                <label>Yahoo</label>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <img src="https://oauth.io/api/providers/yandex/logo" title="" />
+                                                <label>Yandex</label>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </form>
+                            </div>
                             <div class="item">
                                 <form class="form-signin" role="form">
                                     <ul class="breadcrumb">
+                                        <li class="#social-login-carousel">Social login</li>
                                         <li class="active">Sign in</li>
                                         <li><a href="#sign_in-carousel" data-slide="next">Create an account</a></li>
                                     </ul>
@@ -306,7 +313,7 @@
                                     <button class="btn btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-user"></span>Sign In</button>
                                 </form>
                             </div>
-                            <div class="item active">
+                            <div class="item">
                                 <form class="form-signin" role="form">
                                     <ul class="breadcrumb">
                                         <li><a href="#sign_in-carousel" data-slide="prev">Sign in</a></li>
@@ -344,7 +351,7 @@
                                 </form>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
                 </div>
             </div>
         </div>
