--- a/wrio-terms.htm
+++ b/wrio-terms.htm
@@ -113,7 +113,13 @@
                         <h6>Last modified: 4 May 2014</h6>
                         <div class="paragraph">
                             <p class="col-xs-12 col-md-6 col-lg-5">
-                                [написать]
+                                Главные принципы платформы - свобода слова, здравый смысл и уважение чужого мнения. Именно из них проистекают все правила изложенные ниже.
+                            </p>
+                            <div class="col-xs-12 col-md-6 col-lg-7"><span class="glyphicon glyphicon-comment" data-toggle="tooltip" data-placement="right" title="Not yet available"></span></div>
+                        </div>
+                        <div class="paragraph">
+                            <p class="col-xs-12 col-md-6 col-lg-5">
+                                Сабдомены: Пожалуйста, не регистрируйте сабдомены с использованием не принадлежащих вам именами торговых марок. Рано или поздно владелец либо наша система выявит это и вы рискуете не только потерять сабдомен, но и свой аккаунт
                             </p>
                             <div class="col-xs-12 col-md-6 col-lg-7"><span class="glyphicon glyphicon-comment" data-toggle="tooltip" data-placement="right" title="Not yet available"></span></div>
                         </div>
