Ru version. First update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         {
         "@context": "http://schema.org",
         "@type": "Article",
-        "inLanguage": "ru",
+        "inLanguage": "En",
         "keywords": "WRIO Internet OS",
         "name": "WRIO Internet OS",
         "about": "Официальный хаб WRIO OS.",
