Scenarios ticket has been added. Images position fixed

--- a/ru/index.html
+++ b/ru/index.html
@@ -107,6 +107,12 @@
         "*Что еще почитать?*",
         "* https://gigaom.com/2014/12/29/the-overweight-web-average-web-page-size-is-up-15-in-2014/ The overweight web: Average web page size is up 15% in 2014"
         ]
+        },
+        {
+        "@type": "Article",
+        "name": "Сценарии использования",
+        "description": "Раздел описывает различные сценарии использования WRIO Internet OS с детальным описанием решаемых проблем.",
+        "url": "https://wrioos.com/scenarios/"
         }
         ],
         "mentions": [
@@ -122,7 +128,7 @@
         "@type": "ImageObject",
         "author": "https://aa.wr.io",
         "contentLocation": "",
-        "contentUrl": "https://wrioos.com/img/standard_browsing.jpg?30,0",
+        "contentUrl": "https://wrioos.com/img/standard_browsing.jpg?33,0",
         "datePublished": "2016-05-30",
         "description": [
         "Сегодняшняя типичная схема взаимодействия пользователя с сайтами.",
@@ -136,7 +142,7 @@
         "@type": "ImageObject",
         "author": "https://aa.wr.io",
         "contentLocation": "Location",
-        "contentUrl": "https://wrioos.com/img/semantic_browsing.jpg?37,0",
+        "contentUrl": "https://wrioos.com/img/semantic_browsing.jpg?33,0",
         "datePublished": "2016-05-30",
         "description": [
         "Семантическая интернет-навигация:",
@@ -151,7 +157,7 @@
         "@type": "ImageObject",
         "author": "https://aa.wr.io",
         "contentLocation": "Location",
-        "contentUrl": "https://wrioos.com/img/wikipedia.png?42,0",
+        "contentUrl": "https://wrioos.com/img/wikipedia.png?49,0",
         "datePublished": "2016-05-31",
         "description": "За пример мы взяли статью-заготовку без фотографий",
         "name": "Википедия"
@@ -160,7 +166,7 @@
         "@type": "ImageObject",
         "author": "",
         "contentLocation": "Location",
-        "contentUrl": "https://wrioos.com/img/control_of_internet_speech.jpg?31,0",
+        "contentUrl": "https://wrioos.com/img/control_of_internet_speech.jpg?54,0",
         "datePublished": "2016-05-31",
         "description": "",
         "name": "Control of Internet Speech"
