Ru scenarios added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         "@type": "ItemList",
         "name": "Cover",
         "description": "Info about list",
-        "image": "default.wrioos.com/img/no-photo-200x200.png",
-        "url": "wrioos.com/cover/?cover"
+        "image": "https://default.wrioos.com/img/no-photo-200x200.png",
+        "url": "https://wrioos.com/cover/?cover"
         }
         ]
         }
@@ -57,7 +57,7 @@
         {
         "@type": "Article",
         "name": "Команда",
-        "url": "webrunes.com/team.html"
+        "url": "https://webrunes.com/team/"
         }
         ],
         "mentions": [
@@ -65,7 +65,7 @@
         "@type": "Article",
         "name": "WRIO OS",
         "about": "Официальный блог проекта WRIO OS.",
-        "url": "wr.io/?'WRIO OS':2,107"
+        "url": "https://wr.io/?'WRIO OS':2,107"
         },
         {
         "@type": "Article",
@@ -79,7 +79,7 @@
         "@type": "ImageObject",
         "author": "Author name",
         "contentLocation": "Location",
-        "contentUrl": "webrunes.com/img/cover1.jpg?5,0",
+        "contentUrl": "https://webrunes.com/img/cover1.jpg?5,0",
         "datePublished": "2015-01-15",
         "description": "Image description",
         "name": "Image name"
