--- a/ru/index.html
+++ b/ru/index.html
@@ -50,7 +50,7 @@
         "WRIO OS представляет собой изоморфное JavaScript приложение. Это прогрессивные системы, которые одинаково хорошо работают на клиенте и сервере. Подобные адаптивные приложения могут реализовывать различные уровни клиент-серверной обработки, в зависимости от ширины канала и возможностей клиента. В нашем случае мы идем дальше описанного по ссылке подхода, без необходимости в разделении передаваемых данных пользователям и поисковым роботам.",
         "WRIO OS — это не просто облачная ОС. Она создает одноранговую (ссылка на след. раздел) распределенную систему и использует вычислительные ресурсы всех объединенных компьютеров передавая пользователю лишь результат обработки данных и вычислений (ссылка на “Распределенная ОС и метакомпьютинг”).",
         "Следует отметить, что несмотря на то, что для полноценной работы системы требуется интернет доступ, WRIO OS может ограниченно работать и в режиме оффлайн: чтение уже скачанных ранее новостей, просмотр видео роликов, прослушивание музыки, работа с документами, с последующей синхронизацией онлайн, и некоторыми другими функциями. С каждым днем интернет-инфраструктура становится все дешевле и лучше, а значит и проблема интернет доступа становится все меньше.",
-        "WRIO OS не только открывает путь к будущему, где на любом устройстве будет установлен лишь браузер, но, что куда более важно, — изменит интернет и переведет его на новый качественный уровень, который некоторые называют веб 3.0 или семантическим вебом. Вместо сегодняшних устаревших сайтов мы работаем с чистыми семантическими данными и персонализированной рекомендательной системой (ссылка), а блокчеин выполняет функцию общедоступного и нецензурируемого глобального каталога. Веб 3.0 приведет к рождению интернета-вещей (ссылка).",
+        "WRIO OS не только открывает путь к будущему, где на любом устройстве будет установлен лишь браузер, но, что куда более важно, изменит интернет и переведет его на новый качественный уровень, который некоторые называют Веб 3.0 или семантическим вебом. Вместо сегодняшних устаревших сайтов мы работаем с чистыми семантическими данными и персонализированной рекомендательной системой (ссылка), где блокчеин выполняет функцию общедоступного и нецензурируемого глобального каталога. Появление Веб 3.0, в свою очередь, приведет к рождению интернета-вещей.",
         "Поддержка WRIO OS сторонних сайтов 2.0 (ссылка на поддержку сторонних сайтов) поможет постепенному переходу на новый уровень и семантическая революция в вебе для большинства пользователей пройдет незамеченной в виде плавной эволюции."
         ],
         "hasPart": [
@@ -105,14 +105,14 @@
         "К счастью, пока еще не для всех стран актуальна цензура и блокировка, но все больше государств штампует для своих политических целей и защиты большого бизнеса всевозможные антиобщественные законы вроде PIPA и SOPA под различными благовидными причинами.",
         "Как бы то ни было, итог один — свобода слова в интернете становится миражем, а госконтроль, слежка и цензура все усиливаются. Государство всегда будет решать свои проблемы за счет все большего уменьшения свобод граждан, пока мы не станем просто подданными.",
         "*Что еще почитать?*",
-        "* https://gigaom.com/2014/12/29/the-overweight-web-average-web-page-size-is-up-15-in-2014/ The overweight web: Average web page size is up 15% in 2014"
+        "* https://gigaom.com/2014/12/29/the-overweight-web-average-web-page-size-is-up-15-in-2014 The overweight web: Average web page size is up 15% in 2014"
         ]
         },
         {
         "@type": "Article",
         "name": "Сценарии использования",
-        "description": "Раздел описывает различные сценарии использования WRIO Internet OS с детальным описанием решаемых проблем.",
-        "url": "https://wrioos.com/scenarios/"
+        "about": "Раздел описывает различные сценарии использования WRIO Internet OS с детальным описанием решаемых проблем.",
+        "url": "https://wrioos.com/ru/cценарии"
         }
         ],
         "mentions": [
@@ -127,7 +127,6 @@
         {
         "@type": "ImageObject",
         "author": "https://aa.wr.io",
-        "contentLocation": "",
         "contentUrl": "https://wrioos.com/img/standard_browsing.jpg?33,0",
         "datePublished": "2016-05-30",
         "description": [
@@ -141,7 +140,6 @@
         {
         "@type": "ImageObject",
         "author": "https://aa.wr.io",
-        "contentLocation": "Location",
         "contentUrl": "https://wrioos.com/img/semantic_browsing.jpg?33,0",
         "datePublished": "2016-05-30",
         "description": [
@@ -156,7 +154,6 @@
         {
         "@type": "ImageObject",
         "author": "https://aa.wr.io",
-        "contentLocation": "Location",
         "contentUrl": "https://wrioos.com/img/wikipedia.png?49,0",
         "datePublished": "2016-05-31",
         "description": "За пример мы взяли статью-заготовку без фотографий",
@@ -164,12 +161,8 @@
         },
         {
         "@type": "ImageObject",
-        "author": "",
-        "contentLocation": "Location",
         "contentUrl": "https://wrioos.com/img/control_of_internet_speech.jpg?54,0",
-        "datePublished": "2016-05-31",
-        "description": "",
-        "name": "Control of Internet Speech"
+        "datePublished": "2016-05-31"
         }
         ],
         "author": "",
