--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head id="head">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -19,6 +19,9 @@
         "keywords": "WRIO Internet OS",
         "name": "Сценарии использования",
         "about": "Раздел описывает различные сценарии использования WRIO Internet OS с детальным описанием решаемых проблем.",
+        "articleBody": [
+        "Раздел описывает различные сценарии использования WRIO Internet OS с детальным описанием решаемых проблем."
+        ],
         "hasPart": [
         {
         "@type": "Article",
@@ -149,23 +152,6 @@
         }
         ],
         "author": "https://wrioos.com/ru"
-        }
-    </script>
-
-    <script type="application/ld+json">
-        {
-        "@context": "http://schema.org",
-        "@type": "ItemList",
-        "name": "Список WRIO Internet OS",
-        "itemListElement": [
-        {
-        "@type": "ItemList",
-        "name": "Blog",
-        "description": "Официальный блог WRIO Internet OS",
-        "image": "https://default.wrioos.com/img/no-photo-200x200.png",
-        "url": "https://wrioos.com/ru/blog/"
-        }
-        ]
         }
     </script>
 </head>
