<head id="head"> -> <head>

--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head id="head">
+<head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,7 +29,7 @@
         "articleBody": [
         "Прежде чем переходить к технической стороне вопроса, вернемся еще раз к простой конфетной аналогии для описания работы и значения семантики. Снова представим себе, что перед нами стоит очень большой мешок-интернет с коробками конфет. Для того чтобы отсортировать понравившиеся конфеты, придется достать каждую коробку, открыть ее и попробовать каждую из конфет внутри. Сегодняшние сайты — это коробки со страницами-“конфетами”. Зачастую эти коробки плотно обмотаны оберткой с надоедливой рекламой. А чтобы понять, что за информация находится на каждой из страниц, приходится ее открыть и потратить хотя бы несколько секунд чтобы пробежать глазами и понять интересна ли нам представленная информация. Конечно же, невозможно просмотреть все сайты и в большинстве случаев мы пропускаем интересную нам информацию, потребляя наиболее популярную, а значит и распространенную. Такой подход является причиной появления культуры масс, которая, к сожалению, по умолчанию невысокого уровня и замыкает порочный круг — культура масс низкая, а медиа, в погоне за просмотрами, ориентируется на большинство и выпускает примитивный по содержанию, но популярный контент, продолжая удерживать культуру на низком уровне.",
         "Семантический веб подразумевает, что вместо огромного мешка коробок с конфетами вы получаете их не только без обертки, но и разложенными по всевозможным признакам: шоколадные, желе, карамельные и т.д. Аналогично и со страницами: вместо ручного поиска нужной информации, система сразу предложит интересные вам статьи не только каталогизированные по типу информации (новости, наука, развлечения, спорт и т.д.), но и ранжированные по качеству исходя именно из ваших предпочтений.",
-        "Теперь добавим немного технических деталей. Теперь на примере Алисы мы рассмотрим несколько сценариев использования WRIO OS. Первый и самый простой: Алиса через поисковик находит и открывает нужный WRIO OS сайт. Такие сайты называются хабами и отличается по структуре от привычных нам сегодня вебстраниц. Вместо смеси разметки и CSS + JS о которых мы говорили выше, они представляют собой данные разбитые по парам ключ-значение в формате JSON-LD. Весь этот набор страшных слов всего-лишь значит, что если Алиса решит создать страницу с информацией о себе, то она получит страницу с текстом внутри вроде этого:",
+        "Теперь добавим немного технических деталей. Теперь на примере Алисы мы рассмотрим несколько сценариев использования WRIO OS. Первый и самый простой: Алиса через поисковик находит и открывает нужный WRIO OS сайт. Такие сайты называются хабами и отличается по структуре от привычных нам сегодня вебстраниц. Вместо смеси разметки и CSS + JavaScript, о которых мы говорили выше, они представляют собой данные разбитые по парам ключ-значение в формате JSON-LD. Весь этот набор страшных слов всего-лишь значит, что если Алиса решит создать страницу с информацией о себе, то она получит страницу с текстом внутри вроде этого:",
         "Name: Alice",
         "Surname: Smith",
         "Born:1 January 1980",
