--- a/ru/index.html
+++ b/ru/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head id="head">
+<head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
