--- a/ru/обложка/index.html
+++ b/ru/обложка/index.html
@@ -4,46 +4,82 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.">
-    <meta name="author" content="User name1, User name2">
-    <meta name="keywords" content="story, cat">
-    <title>Covers for my blog</title>
+    <meta name="description" content="">
+    <meta name="author" content="webRunes">
+    <meta name="keywords" content="WRIO Internet OS">
+    <title>Обложка</title>
 
     <script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "ItemList",
-        "name": "Covers for my blog",
+        "name": "Обложка",
         "itemListElement": [
         {
         "@type": "ImageObject",
-        "name": "All your stuff in one place",
-        "thumbnail": "webrunes.com/img/preview-cover1.jpg",
-        "contentUrl": "webrunes.com/img/cover1.jpg",
-        "about": "Description 1",
+        "name": "WRIO Internet OS",
+        "thumbnail": "https://wrioos.com/img/semantic_browsing-200x200.jpg",
+        "contentUrl": "https://wrioos.com/img/semantic_browsing.jpg",
+        "about": "Все что вам нужно так это только браузер",
         "text": [
-        "подбор интересного контента на основе ваших предпочтений",
-        "отображение и организация любимых сайтов в удобном для вас виде",
-        "единый каталог всех ваших статей, книг, фото / аудио / видео материалов",
-        "возможность поддержки ваших любимых авторов материально"
+        "Disclaimer: We start a series of stories describing various issues and problems that are related for the most part to the Internet, and our vision of possible ways to solve them."
+        "* вечный студент",
+        "* убежденный либертарианец",
+        "* энтузиаст криптовалют",
+        "* инфо- и крипто-анархист",
+        "* защитник неприкосновенности частной жизни и агитатор открытого государства",
+        "* сторонник Laissez-faire"
         ],
         "mentions": [
         {
         "@type": "Article",
-        "name": "First url title",
-        "about": "Text inside the ticket popup.",
-        "url": "webrunes.com/blog.htm?'ваших предпочтений':1,38"
+        "name": "Непрерывное образование",
+        "about": "Процесс роста общего и профессионального потенциала человека напротяжении всей его жизни.",
+        "url": "https://en.wikipedia.org/wiki/Lifelong_learning?'вечный студент':3,2,external,En"
         },
         {
         "@type": "Article",
-        "name": "About domainname",
-        "about": "Text inside the ticket popup.",
-        "url": "domainname.com/url.htm?'единый каталог':3,0"
+        "name": "Либертарианство",
+        "about": "Политическая философия, в основе которой лежит запрет на «агрессивное насилие», то есть запрет на применение силы или угрозы к другому лицу, или его имуществу, вопреки воле этого лица.",
+        "url": "https://ru.wikipedia.org/wiki/Либертарианство?'либертарианец':4,13,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Криптовалюта",
+        "about": "Электронный механизм обмена, цифровой актив, эмиссия и учёт которого зачастую децентрализованы.",
+        "url": "https://ru.wikipedia.org/wiki/Криптовалюта?'криптовалют':5,12,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Инфоанархизм",
+        "about": "Общий термин для обозначения различных социальных движений, выступающих против ряда форм интеллектуальной собственности, таких как авторское право и патенты, а также цензуры в целом.",
+        "url": "https://ru.wikipedia.org/wiki/Инфоанархизм?'инфо-':6,2,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Криптоанархизм",
+        "about": "Философия, которая призывает к использованию сильной криптографии для защиты приватности и индивидуальной свободы.",
+        "url": "https://ru.wikipedia.org/wiki/Криптоанархизм?'крипто-анархист':6,10,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Неприкосновенность частной жизни",
+        "about": "Ценность, обеспечиваемая правом на неприкосновенность частной жизни.",
+        "url": "https://ru.wikipedia.org/wiki/Неприкосновенность_частной_жизни?'неприкосновенности частной жизни':7,11,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Открытое государство",
+        "about": "Открытое правительство (открытое государство) — это доктрина государственного управления, которая поддерживает право граждан на доступ к документам и действиям государства с целью возможности эффективного общественного контроля за государственным регулированием.",
+        "url": "https://ru.wikipedia.org/wiki/Открытое_государство?'открытого государства':7,55,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Laissez-faire",
+        "about": "Принцип невмешательства — экономическая доктрина, согласно которой государственное вмешательство в экономику должно быть минимальным. В идеале отсутствовать вовсе.",
+        "url": "https://ru.wikipedia.org/wiki/Laissez-faire?'Laissez-faire':8,12,external"
         }
-        ],
-        "contentLocation": "Puerto Vallarta, Mexico",
-        "author": "alexey-anshakov.webrunes.com",
-        "datePublished": "2015-01-25"
+        ]
         },
         {
         "@type": "ImageObject",
@@ -52,7 +88,7 @@
         "contentUrl": "webrunes.com/img/cover2.jpg",
         "about": "Description 2",
         "text": [
-        "хранение всех ваших логинов и паролей",
+        "test",
         "шифрование почты",
         "защита личных данных",
         "защита от вирусов, мошенников, спама, отслеживания и цензуры"
@@ -64,24 +100,18 @@
         "about": "Text inside the ticket popup.",
         "url": "webrunes.com/blog.htm?'хранение':1,0"
         }
-        ],
-        "contentLocation": "Puerto Vallarta, Mexico",
-        "author": "alexey-anshakov.webrunes.com",
-        "datePublished": "2015-02-25"
+        ]
         },
         {
         "@type": "ImageObject",
         "name": "Если вы занимаетесь фото/видео съемками",
-        "thumbnail": "webrunes.com/img/preview-cover3.jpg",
-        "contentUrl": "webrunes.com/img/cover3.jpg",
+        "thumbnail": "https://wrioos.com/img/cover-preview.jpg",
+        "contentUrl": "https://wrioos.com/img/cover.jpg",
         "about": "Description 3",
         "text": [
         "обработка и хранение фото и видео материалов",
         "удобный процесс продажи ваших работ"
-        ],
-        "contentLocation": "Puerto Vallarta, Mexico",
-        "author": "alexey-anshakov.webrunes.com",
-        "datePublished": "2015-03-25"
+        ]
         }
         ]
         }
