Preloader, icons removing, new content (#696)
Preloader logo width update, icons removing, new content

--- a/cover/index.html
+++ b/cover/index.html
@@ -1,25 +1,25 @@
 ﻿<!DOCTYPE html>
-<html lang="en-US">
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.">
-    <meta name="author" content="User name1, User name2">
-    <meta name="keywords" content="story, cat">
-    <title>Covers for my blog</title>
+    <meta name="description" content="">
+    <meta name="author" content="webRunes">
+    <meta name="keywords" content="WRIO Internet OS">
+    <title>Cover</title>
 
     <script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "ItemList",
-        "name": "Covers for my blog",
+        "name": "Covers",
         "itemListElement": [
         {
         "@type": "ImageObject",
-        "name": "All your stuff in one place",
+        "name": "All you need is browser",
         "thumbnail": "webrunes.com/img/preview-cover1.jpg",
-        "contentUrl": "webrunes.com/img/cover1.jpg",
+        "contentUrl": "wrioos.com/img/cover1.jpg",
         "about": "Description 1",
         "text": [
         "подбор интересного контента на основе ваших предпочтений",
