--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head id="head">
+<head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -80,7 +80,7 @@
         "author": "Author name",
         "contentLocation": "Location",
         "contentUrl": "https://webrunes.com/img/cover1.jpg?5,0",
-        "datePublished": "2015-01-15",
+        "datePublished": "2016-01-01",
         "description": "Image description",
         "name": "Image name"
         }
