--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -151,7 +151,7 @@
         "url": "https://wr.io/?'WRIO OS':2,107"
         }
         ],
-        "author": "https://wrioos.com/ru"
+        "author": "https://wrioos.com/ru/"
         }
     </script>
 </head>
