--- a/ru/index.html
+++ b/ru/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -118,9 +118,15 @@
         "mentions": [
         {
         "@type": "Article",
-        "name": "WRIO OS",
-        "about": "Официальный блог проекта WRIO OS.",
-        "url": "https://wr.io/?'WRIO OS':2,107"
+        "name": "Операционная система",
+        "about": "Комплекс взаимосвязанных программ, предназначенных для управления ресурсами компьютера и организации взаимодействия с пользователем.",
+        "url": "https://ru.wikipedia.org/wiki/Операционная_система?'десктопных операционных системах':4,70,external"
+        },
+        {
+        "@type": "Article",
+        "name": "Сценарий 5. Глобальный накопитель и Internet OS",
+        "about": "Глобальный накопитель как замена сегодняшних жестких дисков.",
+        "url": "#?'жестким дискам':4,671"
         }
         ],
         "image": [
