http://schema.org -> https://schema.org

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "Covers",
         "itemListElement": [
@@ -30,7 +30,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "Article",
         "inLanguage": "En",
         "keywords": "WRIO Internet OS",
@@ -93,7 +93,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "My lists",
         "itemListElement": [
