--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -13,7 +13,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "Article",
         "inLanguage": "ru",
         "keywords": "WRIO Internet OS",
