--- a/ru/index.html
+++ b/ru/index.html
@@ -13,7 +13,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "Обложка",
         "itemListElement": [
@@ -30,7 +30,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "Article",
         "inLanguage": "ru",
         "keywords": "WRIO Internet OS",
@@ -179,7 +179,7 @@
 
     <script type="application/ld+json">
         {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "Список WRIO Internet OS",
         "itemListElement": [
