--- a/ru/обложка/index.html
+++ b/ru/обложка/index.html
@@ -11,7 +11,7 @@
 
     <script type="application/ld+json">
     {
-        "@context": "http://schema.org",
+        "@context": "https://schema.org",
         "@type": "ItemList",
         "name": "Обложка",
         "itemListElement": [
