--- a/ru/cценарии/index.html
+++ b/ru/cценарии/index.html
@@ -156,6 +156,6 @@
     </script>
 </head>
 <body>
-    <script type="text/javascript" src="//wrioos.com/start.js"></script>
+    <script type="text/javascript" src="https://wrioos.com/start.js"></script>
 </body>
 </html>
