--- a/ru/index.html
+++ b/ru/index.html
@@ -195,6 +195,6 @@
     </script>
 </head>
 <body>
-    <script type="text/javascript" src="//wrioos.com/start.js"></script>
+    <script type="text/javascript" src="https://wrioos.com/start.js"></script>
 </body>
 </html>
